Fix blog entry title to be left aligned.

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -418,6 +418,8 @@ nav li:hover {
     margin-bottom: 0.2em;
     padding-bottom: 0;
     font-size: 1.6em;
+    text-align: left;
+
 
     a {
         color: $heading-gray;
